// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectionCriteria /> component its snapshot matches story Default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
}

.c1 {
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label"
          for="downshift-0-toggle-button"
          id="downshift-0-label"
        >
          Colour
        </label>
        <div
          class="cds--dropdown cds--list-box"
          id="colour"
        >
          <button
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-0-label downshift-0-toggle-button"
            class="cds--list-box__field"
            id="downshift-0-toggle-button"
            title="Select Colour"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Select Colour
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-0-label"
            class="cds--list-box__menu"
            id="downshift-0-menu"
            role="listbox"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label"
          for="downshift-1-toggle-button"
          id="downshift-1-label"
        >
          Size
        </label>
        <div
          class="cds--dropdown cds--list-box"
          id="size"
        >
          <button
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-1-label downshift-1-toggle-button"
            class="cds--list-box__field"
            id="downshift-1-toggle-button"
            title="Select Size"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Select Size
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-1-label"
            class="cds--list-box__menu"
            id="downshift-1-menu"
            role="listbox"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectionCriteria /> component its snapshot matches story Skeleton 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
}

.c1 {
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="cds--skeleton cds--dropdown-v2 cds--list-box cds--form-item"
      >
        <div
          class="cds--list-box__field"
        >
          <span
            class="cds--list-box__label"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectionCriteria /> component its snapshot matches story WithSelection 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
}

.c1 {
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label"
          for="downshift-2-toggle-button"
          id="downshift-2-label"
        >
          Colour
        </label>
        <div
          class="cds--dropdown cds--list-box"
          id="colour"
        >
          <button
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-2-label downshift-2-toggle-button"
            class="cds--list-box__field"
            id="downshift-2-toggle-button"
            title="Blue"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Blue
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-2-label"
            class="cds--list-box__menu"
            id="downshift-2-menu"
            role="listbox"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label"
          for="downshift-3-toggle-button"
          id="downshift-3-label"
        >
          Size
        </label>
        <div
          class="cds--dropdown cds--list-box"
          id="size"
        >
          <button
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-3-label downshift-3-toggle-button"
            class="cds--list-box__field"
            id="downshift-3-toggle-button"
            title="L"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              L
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-3-label"
            class="cds--list-box__menu"
            id="downshift-3-menu"
            role="listbox"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
